odatests-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: odatests
spec:
  ports:
  - port: 8000
  selector:
    app: odatests
  clusterIP: None
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: odatests
spec:
  selector:
    matchLabels:
      app: odatests
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: odatests
    spec:
      containers:
      - image: admin.reproducible.online/oda-tests:f0f3b9d
        name: odatests
        ports:
        - containerPort: 8000
          name: odatests

      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
