odatests-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: odatests-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: in.internal.odahub.io
    http:
      paths:
      - path: /odatests(/|$)(.*)
        backend:
          serviceName: odatests
          servicePort: 8000
